<resources>
    <string name="app_name">CUYO</string>
    <string name="cuyonon">Cuyonon Dictionary</string>
    <string name="start">START</string>
    <string name="todo">TODO</string>
    <string name="start1">start searching</string>
    <string name="alphabet">cuyonon alphabet</string>
    <string name="phrases">Cuyonon Phrases</string>
    <string name="GREETINGS">greetings</string>
    <string name="phrases_for_greetings">Phrases for Greetings</string>
    <string name="question">Questions</string>
    <string name="question1">Phrases for Questions</string>
    <string name="emergency">Phrases for Emergency</string>
    <string name="emergenc">Emergency</string>
</resources>